<resources>
    <string name="app_name">WangChenKe_Demo</string>
    <string name="main_quetions">快速提问</string>
    <string name="main_thinktank">知识库</string>
    <string name="main_home">主页</string>
    <string name="main_me">我的</string>
    <string name="main_exchange">交流</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
