<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/main_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

    </FrameLayout>

    <RadioGroup
        android:id="@+id/rg_btn_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_bottom_navigation_home"
            style="@style/HomeActivity_style"
            android:checked="true"
            android:drawableTop="@drawable/home_selector"
            android:text="@string/main_home" />

        <RadioButton
            android:id="@+id/rb_bottom_navigation_thinktank"
            style="@style/HomeActivity_style"
            android:drawableTop="@drawable/thinktank_selector"
            android:text="@string/main_thinktank" />

        <RadioButton
            android:id="@+id/rb_bottom_navigation_questions"
            style="@style/HomeActivity_style"
            android:drawableTop="@drawable/question_selector"
            android:text="@string/main_quetions" />

        <RadioButton
            android:id="@+id/rb_bottom_navigation_exchange"
            style="@style/HomeActivity_style"
            android:drawableTop="@drawable/exchange_selector"
            android:text="@string/main_exchange" />

        <RadioButton
            android:id="@+id/rb_bottom_navigation_me"
            style="@style/HomeActivity_style"
            android:drawableTop="@drawable/me_selector"
            android:text="@string/main_me" />
    </RadioGroup>


</LinearLayout>